# expense_predictor

./: README.md  main.py  pyproject.toml
data/: my_data.csv  transactions.csv  transactions_2.csv  transactions_3.csv  transactions_4.csv  transactions_5.csv
notebooks/: analysis.ipynb  transactions.ipynb
notebooks/.ipynb_checkpoints/: analysis-checkpoint.ipynb
src/expense_predictor/: analyzer.py  cli.py  helpers.py  predictor.py  recommendations.py  transactions.py  visualizer.py
