[project]
name = "expense_predictor"
version = "0.1.0"
description = "CLI tool to analyze monthly expenses and predict next month's spending."
authors = [{name = "Your Name"}]
requires-python = ">=3.14"
dependencies = [
    "pandas",
    "matplotlib",
    "numpy",
    "ipykernel>=7.2.0",
]

[project.scripts]
expense-predictor = "expense_predictor.cli:main"

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
