[project]
name = "expense_predictor"
version = "1.0.0"
description = "CLI tool to analyze monthly expenses and predict next month's spending."
authors = [{name = "Saqib Raza"}]
requires-python = ">=3.10"
dependencies = [
    "pandas",
    "matplotlib",
    "numpy",
    "jupyter",
]

[project.scripts]
expense-predictor = "expense_predictor.cli:main"

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
